Kubernetes/yml/Addon-Function/NetworkPolicy/ingress-accept-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: dev
spec:
  podSelector: {}
  # This rule which means ALL ingress flow will be accepted 
  ingress:
  - {}
  policyTypes:
  - Ingress
